Add star icons in place of rating number

--- a/public/styles.css
+++ b/public/styles.css
@@ -9,3 +9,10 @@
     justify-content: center;
     display: inline-block;
 }
+#helpHovered {
+    background-color: red;
+}
+.star {
+    width: 16px;
+    height: 16px;
+}
