--- a/public/styles.css
+++ b/public/styles.css
@@ -12,7 +12,24 @@
 #helpHovered {
     background-color: red;
 }
+#reviewContainer {
+    font-family: 'Open Sans', sans-serif;
+}
+#flagIcon {
+    height: 1.5rem;
+    width: 1.5rem;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg' style='background:%23fff'%3E%3Ctitle%3Eicon/ic_report%3C/title%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0h24v24H0z'/%3E%3Cpath d='M6 2v19a1 1 0 0 1-2 0V4a2 2 0 0 1 2-2z' fill='%23333'/%3E%3Cpath d='M5 13h12.773L13.33 8l4.444-5H6a1 1 0 0 0-1 1v9z' stroke='%23333' stroke-width='2'/%3E%3C/g%3E%3C/svg%3E");
+}
 .star {
     width: 16px;
     height: 16px;
+}
+#upvoteIcon {
+    height: 1.5rem;
+    width: 1.5rem;
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='24' height='24' viewBox='0 0…2' x='1' y='1' width='16' height='16' rx='2'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: 50%;
 }
