Setup html template for review summary

--- a/public/styles.css
+++ b/public/styles.css
@@ -50,10 +50,11 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    cursor: pointer;
 }
 #subReportHelpful {
     display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 #reportText {
     margin-right: 20px;
@@ -69,4 +70,7 @@
 }
 .ratingDate {
     margin-left: 5px;
+}
+.flex {
+    display: flex;
 }
