--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,6 @@
-
+#appMasterContainer {
+    font-family: 'Open Sans', sans-serif;
+}
 
 /*** Syling for ReviewsFeed ***/
 .img-Circle {
@@ -73,5 +75,50 @@
     margin-left: 5px;
 }
 .flex {
+    display: flex;
+}
+
+/*** Styles for Review Toolbar ***/
+#sortMethod {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 6px 0.25rem;
+    font-family: 'Open Sans', sans-serif;
+    -webkit-appearance: menulist-button;
+    height: 30px;
+    width: 300px;
+}
+#toolbarSortText {
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 500;
+    display: flex;
+    font-family: 'Open Sans', sans-serif;
+    padding: .5rem;
+}
+#sortSelection {
+    padding: 0 0 .5rem 0;
+    display: flex;
+    margin-left: 7px;
+}
+#toolbarContainer {
+    margin: 50px;
+    width: 700px;
+    justify-content: center; 
+}
+.filterCheckBox {
+    padding: 1.0rem;
+    border: 1px solid;
+    margin: 10px;
+    cursor: pointer;
+    align-items: center;
+}
+.filterCheckBox:hover {
+    border: 2px red solid;
+}
+#filtersHeader {
+    font-family: 'Open Sans', sans-serif;
+    padding: 0 0 10px 5px;
     display: flex;
 }
