Add styled bars image

--- a/public/styles.css
+++ b/public/styles.css
@@ -158,7 +158,7 @@
 }
 #leftSummaryContainer {
     display: inline-block;
-    margin: 50px;
+    margin: auto;
 }
 #reviewConditional {
     width: 290px;
