--- a/public/styles.css
+++ b/public/styles.css
@@ -25,10 +25,6 @@
     margin: 0 0 0 0;
 }
 #reviewContainer {
-    /* font-family: 'Open Sans', sans-serif;
-    padding-bottom: 18px;
-    margin: 10px;
-    border-bottom: 1px solid #000; */
     padding-top: 1rem;
     padding-bottom: 1rem;
     border-bottom: solid 1px #d8d9db;
@@ -183,12 +179,9 @@
     border-bottom: solid 1px #d8d9db;
 }
 #thumbsUpIcon {
-
     height: 1.125rem;
     width: 1.125rem;
-    /*
-    margin-right: 0.5rem;
-    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' …56-8.278z'/%3E%3Cpath fill='%23333' d='M7 11h2v9H7z'/%3E%3C/g%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-position: 50%; */
+}
+#percentageRecommended {
+    font-weight: bold;
 }
