--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,7 @@
     padding: 0 1rem;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 3rem;
 }
 
 /*** Syling for ReviewsFeed ***/
@@ -152,7 +153,8 @@
 }
 #summaryToolbarContainer {
     display: inline-block;
-    line-height: 2.95
+    line-height: 2.4;
+    margin-left: 1.5rem;
 }
 #leftSummaryContainer {
     display: inline-block;
@@ -160,7 +162,7 @@
     margin-bottom: 20px;
 }
 #reviewConditional {
-    width: 290px;
+    width: 363px;
 }
 .inlineBlock {
     display: inline-block;
@@ -193,4 +195,28 @@
 }
 .summarySpacingContainer {
     padding-top: 1rem;
+}
+.toolbarNumber {
+    margin-right: 0.5rem;
+    width: 1rem;
+    text-align: center;
+}
+.toolbarBox {
+    height: .25rem;
+    border: 1px solid #d8d9db;
+    padding-right: 178px;
+    box-sizing: border-box;
+    overflow: hidden;
+    margin-top: -1px;
+    margin-bottom: -2px;
+}
+.toolbarAndNumber {
+    cursor: pointer;
+}
+.toolbarAndNumber:hover {
+    text-decoration: underline;
+}
+.toolbarAndNumber:hover > .toolbarBox {
+    border-color: transparent; /* remove the border's colour */
+    box-shadow: 0 0 0 2px red; /* emulate the border */
 }
