--- a/public/styles.css
+++ b/public/styles.css
@@ -219,3 +219,47 @@
     background-color: #da3743;
     height: 12px;
 }
+
+/*** Pagination Styling below ***/
+#paginationContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 1rem;
+    align-items: center;
+    height: 2rem;
+}
+.paginationArrow {
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg width='7' height='10' viewBox='0 0 …M2.172 3.593L.757 5.007 5 9.25l1.414-1.414z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E) no-repeat 50%");
+    border-radius: 5000px;
+    border: solid 1px #d8d9db;
+    margin-left: calc(0.5rem - 1px);
+    margin-right: calc(0.5rem - 1px);
+    border: solid 1px #d8d9db!important;
+    cursor: default;
+    display: inline-flex;
+    justify-content: space-around;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    min-width: 2rem;
+    cursor: pointer;
+    align-items: center;
+    height: 2rem;
+}
+.paginationBubble {
+    border: solid 2px #da3743;
+    margin-left: calc(0.5rem - 2px);
+    margin-right: calc(0.5rem - 2px);
+    border-radius: 5000px;
+    border: solid 1px #d8d9db;
+    margin-left: calc(0.5rem - 1px);
+    margin-right: calc(0.5rem - 1px);
+    display: inline-flex;
+    justify-content: space-around;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    min-width: 2rem;
+    cursor: pointer;
+    align-items: center;
+    height: 2rem;
+}
