--- a/public/styles.css
+++ b/public/styles.css
@@ -268,3 +268,14 @@
     align-items: center;
     height: 2rem;
 }
+.first {
+    width: 100%;
+    height: 1000px;
+    background: #ccc;
+}
+
+.second {
+    width: 100%;
+    height: 1000px;
+    background: #999;
+}
