--- a/public/styles.css
+++ b/public/styles.css
@@ -258,7 +258,7 @@
 .paginationBubble:hover, .paginationArrow:hover, #selectedBubble {
     box-shadow: 0 0 0 2px #da3743; 
 }
-.elipsisBubble {
+.ellipsisBubble {
     display: inline-flex;
     justify-content: space-around;
     margin-left: 0.5rem;
@@ -267,15 +267,4 @@
     cursor: pointer;
     align-items: center;
     height: 2rem;
-}
-.first {
-    width: 100%;
-    height: 1000px;
-    background: #ccc;
-}
-
-.second {
-    width: 100%;
-    height: 1000px;
-    background: #999;
 }
