--- a/public/styles.css
+++ b/public/styles.css
@@ -176,7 +176,7 @@
 
 
 /*** modal styles for report PopUp ***/
-.modal {
+.modalBackground {
     position: fixed; 
     z-index: 1; 
     left: 0;
@@ -187,9 +187,9 @@
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.5);
 }
-.modal-content {
+.modalContent {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
     width: 50%; 
