--- a/public/styles.css
+++ b/public/styles.css
@@ -88,18 +88,7 @@
 .flex {
     display: flex;
 }
-/* #reviewReport {
-    position: absolute;
-    background: #fff;
-    z-index: 1000;
-    border: 1px solid #e1e1e1;
-    border-radius: 2px;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    box-shadow: 0 2px 4px rgba(51,51,51,.2);
-    right: 2.9rem;
-    max-width: 25rem;
-} */
+
 #reportHeadContainer {
     justify-content: flex-end;
     background-color: #ffffff;
@@ -126,10 +115,9 @@
     display: flex;
 }
 #reviewReasonText {
-    width: 100%;
+    width: 90%;
     height: 5rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin: 1rem 0 1rem 1rem;
     padding: 0.5rem;
     resize: none;
     font-family: 'Open Sans', sans-serif;
