--- a/public/styles.css
+++ b/public/styles.css
@@ -115,9 +115,9 @@
     display: flex;
 }
 #reviewReasonText {
-    width: 90%;
+    width: 100%;
     height: 5rem;
-    margin: 1rem 0 1rem 1rem;
+    margin: 1rem 0 1rem;
     padding: 0.5rem;
     resize: none;
     font-family: 'Open Sans', sans-serif;
