--- a/public/styles.css
+++ b/public/styles.css
@@ -22,10 +22,64 @@
     position: relative;
     flex: 0 0 auto;
 }
+#reviewRightHalf {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+#reviewStarsDateRating {
+    flex-direction: column;
+    display: flex;
+    position: relative;
+}
 #reviewCircleContainer {
     display: flex;
     justify-content: center;
     margin-bottom: 0.5rem;
+}
+#reviewStarsDate {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 0.875rem;
+    font-weight: 500;
+}
+#reviewStarsContainer {
+    width: calc(18px * 5 + 0.25rem * 5);
+    margin: 0 0.5rem 0 0;
+    flex-shrink: 0;
+    padding-bottom: 2px;
+}
+.reviewStar {
+    display: inline-block;
+    width: 18;
+    height: 20;
+    margin-right: 0.10rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+}
+.reviewRatingDate {
+    margin-left: 0.5rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+}
+#reviewRatingsContainer {
+    display: flex;
+    flex-direction: row;
+    margin-top: 0.5rem;
+}
+.reviewRatingCategory {
+    font-size: 0.875rem;
+    font-weight: bold;
+    line-height: 1.43;
+    text-transform: capitalize;
+    margin: 0 0.5rem 0 0;
+}
+.reviewRatingNumber {
+    color: #da3743;
+    font-size: 0.875rem;
+    font-weight: bold;
+    line-height: 1.43;
 }
 .twoHalvesContainer {
     display: flex;
@@ -107,9 +161,12 @@
     color: #2d333f;
 }
 #readMore {
-    text-decoration: none;
     color: #da3743;
+    text-decoration: none;
     font-size: inherit;
+    height: 24px;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
 }
 #readMore:hover {
     text-decoration: underline;
@@ -127,8 +184,8 @@
     height: 16px;
 }
 #upvoteIcon {
-    height: 1.5rem;
-    width: 1.5rem;
+    height: 1.25rem;
+    width: 1.25rem;
     display: flex;
 }
 #reportHelpful {
@@ -139,11 +196,23 @@
 }
 #subReportHelpful {
     display: flex;
-    align-items: center;
+    position: relative;
+    align-self: flex-start;
     cursor: pointer;
 }
-#reportText {
-    margin-right: 20px;
+.reportText {
+    margin: 0 0 0 0.25rem;
+    font-weight: 500;
+    line-height: 1.43;
+    font-size: 0.875rem;
+}
+.flexCenter {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    margin-right: 0.5rem;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
 }
 /* #starsAndDate {
     display: flex;
