--- a/public/styles.css
+++ b/public/styles.css
@@ -389,8 +389,9 @@
 }
 #summaryToolbarContainer {
     display: inline-block;
-    /* line-height: 2.4; */
-    margin-left: 1.5rem;
+    margin-left: .5rem;
+    position: relative;
+    bottom: 68;
 }
 #leftSummaryContainer {
     display: inline-block;
@@ -420,14 +421,38 @@
     border-bottom: solid 1px #d8d9db;
 }
 .summaryIcon {
-    height: 1.125rem;
-    width: 1.125rem;
+    height: 1.5rem;
+    width: 1.5rem;
+    margin-left: .25rem;
 }
 #percentageRecommended {
     font-weight: bold;
 }
 #lovedForContainer {
-    margin-bottom: 3rem;
+    margin-bottom: 2.5rem;
+}
+#lovedForText {
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 500;
+    display: flex;
+    margin-bottom: 2rem;
+}
+.lovedForBox {
+    padding: 1rem .5rem;
+    border: 1px solid #d8d9db;
+    cursor: pointer;
+    align-items: center;
+    margin: .5rem;
+
+}
+.lovedForBox:hover {
+    border-color: transparent;
+    box-shadow: 0 0 0 2px #da3743;
+}
+.lovedForIcon {
+    width: 24px;
+    height: 24px;
 }
 .summarySpacingContainer {
     padding-top: 1rem;
@@ -443,22 +468,24 @@
 .toolbarAndNumber:hover {
     text-decoration: underline;
 }
-.toolbarAndNumber:hover > .w3-light-grey, .w3-hover-light-grey:hover {
+.toolbarAndNumber:hover > .toolbar-light-background, .toolbar-hover-light-background:hover {
     border-color: transparent; 
     box-shadow: 0 0 0 2px #da3743; 
 }
-.w3-light-grey, .w3-hover-light-grey:hover {
+.toolbar-light-background, .toolbar-hover-light-background:hover {
     color: #000;
     border: 1px solid #d8d9db;
     display: inline-block;
     width: 232px;
-    height: 12px;
-    margin-bottom: .5rem;
+    height: 13px;
+    margin-bottom: .75rem;
+    position: relative;
+    top: 14;
 }
-.w3-green, .w3-hover-green:hover {
+.toolbar-red, .toolbar-hover-red:hover {
     color: #fff;
     background-color: #da3743;
-    height: 12px;
+    height: 13px;
 }
 #bestRestaurantsLink {
     color: #da3743;
@@ -467,6 +494,8 @@
 #bestRestaurantsLink:hover {
     text-decoration: underline;
 }
+
+
 
 /*** Pagination Styling below ***/
 #paginationContainer {
