--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,6 @@
 }
 
 
-
 /*** Syling for ReviewsFeed ***/
 .rightHalf, .leftHalf {
     display: inline-block
@@ -94,6 +93,7 @@
     align-items: center;
     justify-content: center;
 }
+
 #usernameContainer {
     text-align: center;
     word-break: break-word;
@@ -325,6 +325,44 @@
     height: 30px;
     width: 300px;
 }
+#dropdownHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 6px 0.25rem;
+    font-size: 0.875rem;
+    border-radius: 2px;
+    border: 1px solid #d8d9db;
+    cursor: pointer;
+    box-sizing: border-box;
+    width: 275px;
+    margin: .25rem .5rem 0rem .30rem;
+
+}
+.dropdownItem {
+    width: 275px;
+    font-size: 0.875rem;
+    border-radius: 2px;
+    cursor: pointer;
+    box-sizing: border-box;
+    padding: .65rem;
+}
+.dropdownContainer {
+    border: 1px solid #d8d9db;
+    width: 273px;
+    margin-left: .3rem;
+    display: block;
+    position: absolute;
+    z-index: 300;
+    background-color: white;
+}
+#dropdownHeader:hover {
+    border-color: transparent;
+    box-shadow: 0 0 0 2px #da3743;
+}
+.dropdownItem:hover {
+    background-color: #e9eaec; 
+}
 #toolbarSortText {
     font-size: 1rem;
     line-height: 1.5;
@@ -354,7 +392,7 @@
 }
 #filtersHeader {
     font-family: 'Open Sans', sans-serif;
-    margin: 0 0 20px 5px;
+    margin: .5rem 0 20px 5px;
     display: flex;
     font-weight: 500;
 }
