--- a/public/styles.css
+++ b/public/styles.css
@@ -363,6 +363,13 @@
 .dropdownItem:hover {
     background-color: #e9eaec; 
 }
+.dropdownText {
+    position: relative;
+    bottom: 3;
+}
+#Capa_1 {
+    margin-right: .3rem;
+}
 #toolbarSortText {
     font-size: 1rem;
     line-height: 1.5;
