--- a/public/styles.css
+++ b/public/styles.css
@@ -386,7 +386,7 @@
 #toolbarContainer {
     margin-bottom: 2rem;
 }
-.filterCheckBox {
+/* .filterCheckBox {
     padding: .5rem .5rem;
     border: 1px solid #d8d9db;
     cursor: pointer;
@@ -399,20 +399,20 @@ span:focus {
 .filterCheckBox:hover, .filterCheckBox:focus {
     border-color: transparent;
     box-shadow: 0 0 0 2px #da3743;
-}
+} */
 #filtersHeader {
     font-family: 'Open Sans', sans-serif;
     margin: .5rem 0 20px 5px;
     display: flex;
     font-weight: 500;
 }
-.filterBoxIcon {
+/* .filterBoxIcon {
     position: relative;
     top: 3;
     margin-right: .25rem;
     width: 18px;
     height: 18px;
-}
+} */
 
 
 
@@ -511,22 +511,8 @@ span:focus {
     display: flex;
     margin-bottom: 2rem;
 }
-.lovedForBox {
-    padding: 1rem .5rem;
-    border: 1px solid #d8d9db;
-    cursor: pointer;
-    align-items: center;
-    margin: .5rem 1rem .5rem 0;
 
-}
-.lovedForBox:hover {
-    border-color: transparent;
-    box-shadow: 0 0 0 2px #da3743;
-}
-.lovedForIcon {
-    width: 24px;
-    height: 24px;
-}
+
 .summarySpacingContainer {
     padding-top: 1rem;
 }
