--- a/client/components/App.css
+++ b/client/components/App.css
@@ -2,7 +2,5 @@
     font-family: 'Open Sans', sans-serif;
     width: 640px;
     padding: 0 1rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 3rem;
+    margin: 3rem auto auto 3rem;
 }
