--- a/client/components/Review.css
+++ b/client/components/Review.css
@@ -40,8 +40,8 @@
 }
 .reviewStar {
     display: inline-block;
-    width: 18;
-    height: 20;
+    width: 18px;
+    height: 20px;
     margin-right: 0.10rem;
     font-size: 0.875rem;
     font-weight: 500;
