--- a/client/components/App.css
+++ b/client/components/App.css
@@ -2,5 +2,5 @@
     font-family: 'Open Sans', sans-serif;
     width: 640px;
     padding: 0 1rem;
-    margin: 3rem auto auto 3rem;
+    margin: 3rem auto 3rem auto;
 }
