--- a/client/components/FilterBox.css
+++ b/client/components/FilterBox.css
@@ -14,7 +14,7 @@ span:focus {
 }
 .filterBoxIcon {
     position: relative;
-    top: 3;
+    top: 3px;
     margin-right: .25rem;
     width: 18px;
     height: 18px;
